syntax = "proto3";

package dev.vibeafrika.pcm.grpc.common;

option java_multiple_files = true;
option java_package = "dev.vibeafrika.pcm.grpc.common";
option java_outer_classname = "CommonProto";

// Common error codes used across all services
enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  NOT_FOUND = 1;
  ALREADY_EXISTS = 2;
  INVALID_ARGUMENT = 3;
  PERMISSION_DENIED = 4;
  INTERNAL_ERROR = 5;
  UNAVAILABLE = 6;
  UNAUTHENTICATED = 7;
}

// Common error details
message ErrorDetails {
  ErrorCode code = 1;
  string message = 2;
  map<string, string> metadata = 3;
}

// Pagination request
message PaginationRequest {
  int32 page = 1;
  int32 page_size = 2;
  string sort_by = 3;
  bool ascending = 4;
}

// Pagination response
message PaginationResponse {
  int32 total_count = 1;
  int32 page = 2;
  int32 page_size = 3;
  int32 total_pages = 4;
}

// Tenant context (included in metadata)
message TenantContext {
  string tenant_id = 1;
  string user_id = 2;
  repeated string roles = 3;
}
